CREATE TABLE endereco
(
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    cep           VARCHAR(8),
    logradouro    VARCHAR(200)                            NOT NULL,
    numero        VARCHAR(20),
    complemento   VARCHAR(100),
    bairro        VARCHAR(100)                            NOT NULL,
    cidade        VARCHAR(100)                            NOT NULL,
    uf            VARCHAR(2)                              NOT NULL,
    latitude      DECIMAL(10, 7),
    longitude     DECIMAL(10, 7),
    criado_em     TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    atualizado_em TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    CONSTRAINT pk_endereco PRIMARY KEY (id)
);

CREATE TABLE perfil
(
    id            UUID                        NOT NULL,
    usuario_id    BIGINT,
    tipo          VARCHAR(30)                 NOT NULL,
    nome_usuario  VARCHAR(50)                 NOT NULL,
    nome_exibicao VARCHAR(100)                NOT NULL,
    telefone      VARCHAR(20),
    endereco_id   BIGINT,
    foto_url      VARCHAR(500),
    bio           VARCHAR(500),
    criado_em     TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    atualizado_em TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    CONSTRAINT pk_perfil PRIMARY KEY (id)
);

ALTER TABLE perfil
    ADD CONSTRAINT uk_perfil_nome_usuario UNIQUE (nome_usuario);

ALTER TABLE perfil
    ADD CONSTRAINT uk_perfil_usuario_id_tipo UNIQUE (usuario_id, tipo);

CREATE INDEX idx_perfis_tipo ON perfil (tipo);

ALTER TABLE perfil
    ADD CONSTRAINT FK_PERFIL_ENDERECO FOREIGN KEY (endereco_id) REFERENCES endereco (id) ON DELETE SET NULL;

ALTER TABLE perfil
    ADD CONSTRAINT FK_PERFIL_ON_USUARIO FOREIGN KEY (usuario_id) REFERENCES usuario (id) ON DELETE CASCADE;

CREATE INDEX idx_perfis_usuario_id ON perfil (usuario_id);