// =============================================================================
// Bico em Casa — Modelo de Dados
// Versao 4.0.0 · 2026-08-22 · PostgreSQL 18
//
// Espelho legivel: docs/modelo-dados.md  ·  Convencoes: design-sistema.md §5.2
// Cole este arquivo em https://dbdiagram.io para visualizar.
//
// Convencoes (ADR-0007, ADR-0008):
//   tabelas   snake_case SINGULAR, sem prefixo
//   colunas   snake_case em portugues
//   PK        bigint identity nas tabelas de cadastro
//             uuid gen_random_uuid() nas tabelas transacionais
//   dinheiro  numeric(10,2)
//   enums     rotulos sempre em MAIUSCULA
// =============================================================================

enum tipo_perfil {
  CLIENTE
  PROFISSIONAL
  ADMIN
}

enum status_contratacao {
  SOLICITADA
  ORCADA
  ACEITA
  RECUSADA
  EM_ANDAMENTO
  CONCLUIDA
  CANCELADA
}

enum tipo_alvo_denuncia {
  SERVICO
  PERFIL
  AVALIACAO
}

enum status_denuncia {
  PENDENTE
  PROCEDENTE
  IMPROCEDENTE
}

// ---------------------------------------------------------------------------
// autenticacao — RF001, RF002, RNF001, RNF019, RNF020, RNF021
// ---------------------------------------------------------------------------

Table usuario {
  id bigint [pk, increment]
  nome varchar(150) [not null]
  email varchar(255) [not null, unique]
  email_verificado boolean [not null, default: false]
  hash_senha varchar(255) [not null, note: 'Argon2id']
  cpf varchar(11) [unique, note: 'Somente digitos']
  ativo boolean [not null, default: true]
  tentativas_login int [not null, default: 0]
  bloqueado_ate timestamptz
  ultimo_login timestamptz
  criado_em timestamptz [not null, default: `now()`]
  atualizado_em timestamptz [not null, default: `now()`]

  indexes {
    email [unique, name: 'uq_usuario_email']
    cpf   [unique, name: 'uq_usuario_cpf']
    ativo [name: 'idx_usuario_ativo']
  }
}

Table refresh_token {
  id uuid [pk, default: `gen_random_uuid()`]
  usuario_id bigint [not null]
  hash_token varchar(255) [not null, unique]
  familia_id uuid [not null]
  substituido_por uuid [unique]
  expira_em timestamptz [not null]
  revogado_em timestamptz
  ip_origem inet
  criado_em timestamptz [not null, default: `now()`]

  indexes {
    hash_token [unique, name: 'uq_refresh_token_hash_token']
    usuario_id [name: 'idx_refresh_token_usuario_id']
    familia_id [name: 'idx_refresh_token_familia_id']
  }
}

Table token_recuperacao {
  id uuid [pk, default: `gen_random_uuid()`]
  usuario_id bigint [not null]
  hash_token varchar(255) [not null, unique]
  expira_em timestamptz [not null]
  usado_em timestamptz
  criado_em timestamptz [not null, default: `now()`]

  indexes {
    hash_token [unique, name: 'uq_token_recuperacao_hash_token']
    usuario_id [name: 'idx_token_recuperacao_usuario_id']
  }
}

// ---------------------------------------------------------------------------
// usuarios — RF002, RF021, RF022, RNF014, RNF022
// ---------------------------------------------------------------------------

Table perfil {
  id uuid [pk, default: `gen_random_uuid()`, note: 'Excecao ao ADR-0007 — ver ADR-0009']
  usuario_id bigint [not null]
  tipo tipo_perfil [not null, default: 'CLIENTE']
  nome_usuario varchar(50) [not null, unique]
  nome_exibicao varchar(100) [not null]
  telefone varchar(20)
  endereco_id bigint
  foto_url varchar(500)
  bio varchar(500)
  criado_em timestamptz [not null, default: `now()`]
  atualizado_em timestamptz [not null, default: `now()`]

  indexes {
    (usuario_id, tipo) [unique, name: 'uq_perfil_usuario_tipo']
    nome_usuario [unique, name: 'uq_perfil_nome_usuario']
    usuario_id [name: 'idx_perfil_usuario_id']
    tipo [name: 'idx_perfil_tipo']
  }
}

Table endereco {
  id bigint [pk, increment]
  cep varchar(8)
  logradouro varchar(200)
  numero varchar(20)
  complemento varchar(100)
  bairro varchar(100)
  cidade varchar(100) [not null]
  uf char(2) [not null]
  latitude numeric(10,7)
  longitude numeric(10,7)
  criado_em timestamptz [not null, default: `now()`]
  atualizado_em timestamptz [not null, default: `now()`]

  indexes {
    (cidade, uf) [name: 'idx_endereco_cidade_uf']
    (latitude, longitude) [name: 'idx_endereco_coordenadas']
  }
}

Table log_acao {
  id uuid [pk, default: `gen_random_uuid()`]
  autor_usuario_id bigint
  acao varchar(80) [not null]
  alvo_tipo varchar(40)
  alvo_id varchar(64) [note: 'Polimorfico, sem FK']
  detalhes jsonb
  ip_origem inet
  criado_em timestamptz [not null, default: `now()`]

  indexes {
    autor_usuario_id [name: 'idx_log_acao_autor']
    (alvo_tipo, alvo_id) [name: 'idx_log_acao_alvo']
    criado_em [name: 'idx_log_acao_criado_em']
    acao [name: 'idx_log_acao_acao']
  }
  Note: 'RNF022 — somente escrita. Sem atualizado_em de proposito.'
}

// ---------------------------------------------------------------------------
// profissionais — RF003, RF005
// ---------------------------------------------------------------------------

Table portfolio {
  id bigint [pk, increment]
  perfil_id uuid [not null, unique]
  titulo varchar(120) [not null]
  descricao varchar(1000)
  slug_url varchar(120) [not null, unique]
  foto_capa_url varchar(500)
  criado_em timestamptz [not null, default: `now()`]
  atualizado_em timestamptz [not null, default: `now()`]

  indexes {
    perfil_id [unique, name: 'uq_portfolio_perfil_id']
    slug_url  [unique, name: 'uq_portfolio_slug_url']
  }
}

Table portfolio_foto {
  id uuid [pk, default: `gen_random_uuid()`]
  portfolio_id bigint [not null]
  url varchar(500) [not null]
  legenda varchar(200)
  ordem int [not null, default: 0]
  criado_em timestamptz [not null, default: `now()`]

  indexes {
    (portfolio_id, ordem) [name: 'idx_portfolio_foto_portfolio_ordem']
  }
}

Table disponibilidade {
  id uuid [pk, default: `gen_random_uuid()`]
  perfil_id uuid [not null]
  dia_semana smallint [not null, note: 'ck_disponibilidade_dia_semana: BETWEEN 0 AND 6']
  hora_inicio time [not null]
  hora_fim time [not null, note: 'ck_disponibilidade_intervalo: hora_fim > hora_inicio']
  criado_em timestamptz [not null, default: `now()`]
  atualizado_em timestamptz [not null, default: `now()`]

  indexes {
    (perfil_id, dia_semana) [name: 'idx_disponibilidade_perfil_dia']
  }
}

// ---------------------------------------------------------------------------
// servicos — RF004, RF009, RF010, RF011
// ---------------------------------------------------------------------------

Table tag {
  id uuid [pk, default: `gen_random_uuid()`]
  nome varchar(50) [not null, unique, note: 'ck_tag_nome_nao_vazio: length(trim(nome)) > 0']
  slug varchar(60) [not null, unique]
  criado_em timestamptz [not null, default: `now()`]
  atualizado_em timestamptz [not null, default: `now()`]

  indexes {
    nome [unique, name: 'uq_tag_nome']
    slug [unique, name: 'uq_tag_slug']
  }
}

Table servico {
  id uuid [pk, default: `gen_random_uuid()`]
  perfil_id uuid [not null]
  titulo varchar(120) [not null]
  descricao varchar(1000)
  preco_previo numeric(10,2) [not null, note: 'ck_servico_preco_nao_negativo: >= 0']
  unidade_preco varchar(20) [not null, default: 'SERVICO', note: 'SERVICO | HORA | METRO_QUADRADO']
  ativo boolean [not null, default: true]
  criado_em timestamptz [not null, default: `now()`]
  atualizado_em timestamptz [not null, default: `now()`]

  indexes {
    perfil_id [name: 'idx_servico_perfil_id']
    ativo [name: 'idx_servico_ativo']
  }
  Note: 'A oferta do catalogo. O trabalho contratado e contratacao.'
}

Table servico_tag {
  servico_id uuid [not null]
  tag_id uuid [not null]

  indexes {
    (servico_id, tag_id) [pk]
    tag_id [name: 'idx_servico_tag_tag_id']
  }
}

// ---------------------------------------------------------------------------
// contratacoes — RF008, RF012, RF013, RF014, RF015, RF016, RF017, RF018
// ---------------------------------------------------------------------------

Table contratacao {
  id uuid [pk, default: `gen_random_uuid()`]
  cliente_perfil_id uuid [not null]
  profissional_perfil_id uuid [not null]
  servico_id uuid
  endereco_id bigint [not null]
  titulo varchar(120) [not null]
  descricao varchar(2000) [not null]
  status status_contratacao [not null, default: 'SOLICITADA']
  valor_orcado numeric(10,2)
  valor_final numeric(10,2) [note: 'Congelado na aceitacao']
  distancia_km numeric(6,2)
  motivo_cancelamento varchar(500)
  cancelado_por_perfil_id uuid [note: 'ck_contratacao_cancelamento_coerente: status <> CANCELADA OR NOT NULL']
  concluida_em timestamptz
  criado_em timestamptz [not null, default: `now()`]
  atualizado_em timestamptz [not null, default: `now()`]

  indexes {
    cliente_perfil_id [name: 'idx_contratacao_cliente']
    profissional_perfil_id [name: 'idx_contratacao_profissional']
    status [name: 'idx_contratacao_status']
    (cliente_perfil_id, criado_em) [name: 'idx_contratacao_cliente_criado_em']
  }
}

Table contratacao_historico {
  id uuid [pk, default: `gen_random_uuid()`]
  contratacao_id uuid [not null]
  status_anterior status_contratacao
  status_novo status_contratacao [not null]
  alterado_por_perfil_id uuid
  observacao varchar(500)
  criado_em timestamptz [not null, default: `now()`]

  indexes {
    (contratacao_id, criado_em) [name: 'idx_contratacao_historico_contratacao']
  }
}

Table contratacao_anexo {
  id uuid [pk, default: `gen_random_uuid()`]
  contratacao_id uuid [not null]
  url varchar(500) [not null]
  nome_arquivo varchar(200) [not null]
  tamanho_bytes bigint [not null, note: 'ck_contratacao_anexo_tamanho: <= 5 MB (RNF017)']
  tipo_conteudo varchar(80) [not null, note: 'RNF017: image/jpeg, image/png, image/webp']
  criado_em timestamptz [not null, default: `now()`]

  indexes {
    contratacao_id [name: 'idx_contratacao_anexo_contratacao_id']
  }
}

Table notificacao {
  id uuid [pk, default: `gen_random_uuid()`]
  destinatario_perfil_id uuid [not null]
  tipo varchar(60) [not null]
  titulo varchar(150) [not null]
  mensagem varchar(500)
  alvo_tipo varchar(40)
  alvo_id varchar(64) [note: 'Polimorfico, sem FK']
  lida_em timestamptz
  criado_em timestamptz [not null, default: `now()`]

  indexes {
    (destinatario_perfil_id, lida_em) [name: 'idx_notificacao_destinatario_lida']
  }
}

// ---------------------------------------------------------------------------
// avaliacoes — RF006, RF007, RF019, RF020
// ---------------------------------------------------------------------------

Table avaliacao {
  id uuid [pk, default: `gen_random_uuid()`]
  contratacao_id uuid [not null, unique]
  autor_perfil_id uuid [not null]
  avaliado_perfil_id uuid [not null]
  nota smallint [not null, note: 'ck_avaliacao_nota_valida: BETWEEN 1 AND 5']
  comentario varchar(1000)
  criado_em timestamptz [not null, default: `now()`]
  atualizado_em timestamptz [not null, default: `now()`]

  indexes {
    contratacao_id [unique, name: 'uq_avaliacao_contratacao_id']
    avaliado_perfil_id [name: 'idx_avaliacao_avaliado_perfil_id']
    (avaliado_perfil_id, nota) [name: 'idx_avaliacao_avaliado_nota']
  }
}

Table denuncia {
  id uuid [pk, default: `gen_random_uuid()`]
  autor_perfil_id uuid [not null]
  denunciado_perfil_id uuid
  contratacao_id uuid
  alvo_tipo tipo_alvo_denuncia [not null]
  alvo_id varchar(64) [not null, note: 'Polimorfico, sem FK']
  motivo varchar(80) [not null]
  descricao varchar(1000)
  fotos jsonb
  status status_denuncia [not null, default: 'PENDENTE']
  analisado_por_perfil_id uuid
  analisado_em timestamptz
  parecer varchar(1000)
  criado_em timestamptz [not null, default: `now()`]
  atualizado_em timestamptz [not null, default: `now()`]

  indexes {
    status [name: 'idx_denuncia_status']
    (alvo_tipo, alvo_id) [name: 'idx_denuncia_alvo']
    autor_perfil_id [name: 'idx_denuncia_autor']
    denunciado_perfil_id [name: 'idx_denuncia_denunciado']
    contratacao_id [name: 'idx_denuncia_contratacao']
  }
}

// ---------------------------------------------------------------------------
// RELACIONAMENTOS
// ---------------------------------------------------------------------------

Ref: refresh_token.usuario_id > usuario.id [delete: cascade]
Ref: refresh_token.substituido_por - refresh_token.id [delete: set null]
Ref: token_recuperacao.usuario_id > usuario.id [delete: cascade]

Ref: perfil.usuario_id > usuario.id [delete: cascade]
Ref: perfil.endereco_id > endereco.id [delete: set null]
Ref: log_acao.autor_usuario_id > usuario.id [delete: set null]

Ref: portfolio.perfil_id - perfil.id [delete: cascade]
Ref: portfolio_foto.portfolio_id > portfolio.id [delete: cascade]
Ref: disponibilidade.perfil_id > perfil.id [delete: cascade]

Ref: servico.perfil_id > perfil.id [delete: cascade]
Ref: servico_tag.servico_id > servico.id [delete: cascade]
Ref: servico_tag.tag_id > tag.id [delete: cascade]

Ref: contratacao.cliente_perfil_id > perfil.id [delete: restrict]
Ref: contratacao.profissional_perfil_id > perfil.id [delete: restrict]
Ref: contratacao.servico_id > servico.id [delete: set null]
Ref: contratacao.endereco_id > endereco.id [delete: restrict]
Ref: contratacao.cancelado_por_perfil_id > perfil.id [delete: set null]
Ref: contratacao_historico.contratacao_id > contratacao.id [delete: cascade]
Ref: contratacao_historico.alterado_por_perfil_id > perfil.id [delete: set null]
Ref: contratacao_anexo.contratacao_id > contratacao.id [delete: cascade]
Ref: notificacao.destinatario_perfil_id > perfil.id [delete: cascade]

Ref: avaliacao.contratacao_id - contratacao.id [delete: cascade]
Ref: avaliacao.autor_perfil_id > perfil.id [delete: restrict]
Ref: avaliacao.avaliado_perfil_id > perfil.id [delete: restrict]
Ref: denuncia.autor_perfil_id > perfil.id [delete: restrict]
Ref: denuncia.denunciado_perfil_id > perfil.id [delete: restrict]
Ref: denuncia.contratacao_id > contratacao.id [delete: set null]
Ref: denuncia.analisado_por_perfil_id > perfil.id [delete: set null]
